[package]
name = "npulama"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"

# System tray
tray-icon = "0.17"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP proxy
axum = "0.7"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
rand = "0.8"
dirs = "5"
